--- a/device.html
+++ b/device.html
@@ -42,9 +42,9 @@
             <h1 class="heading">OBJECT TV, MONITOR, WEBCAM</h1>
             <a href="index.html" class="btn">BACK</a>
             <br><br><br>
-            <h1 id="status" class="btn btn-danger">There are 3 objects in the image from which cocossd model has detected 1 objects</h1>
+            <h1 id="status" class="btn btn-danger"></h1>
             <br>
-            <h1 id="detected_objects" class="btn btn-success"></h1>
+            <h1 id="detected_objects" class="btn btn-success">There are 3 objects in the image from which cocossd model has detected 1 objects</h1>
             <br><br>
         </center>
         <script src="device.js"></script>
