--- a/book.html
+++ b/book.html
@@ -44,7 +44,7 @@
             <br><br><br>
             <h1 id="status" class="btn btn-danger"></h1>
             <br>
-            <h1 id="detected_objects" class="btn btn-success"></h1>
+            <h1 id="detected_objects" class="btn btn-success">There are many objects in the image from which cocossd model has detected 1 objects</h1>
             <br><br>
         </center>
         <script src="book.js"></script>
